--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-DB_URL ="mongodb+srv://admin1:adminpass@cluster0.ym0m3b4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+DB_URL ="add your db url"
 JWT_SECRET="Website is working"
 PORT=5000
